<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dip"
        style="?android:attr/buttonBarButtonStyle"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonBarButtonStyle" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button1" 
            android:background="#02FD95"/>

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonBarButtonStyle" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button2"
            android:background="#FB137F" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonBarButtonStyle" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button3"
            android:background="#FB9313" />

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonBarButtonStyle" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button4"
            android:background="#B513FB"/>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dip" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_gravity="center">

        <Button
            android:id="@+id/button5"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button5" />
        
        <EditText 
            android:id="@+id/Hello_world"
            android:layout_weight="2"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:hint="@string/Hello_world" />

        <Button
            android:id="@+id/button6"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_margin="10dip"
        android:gravity="center">

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CheckBox1" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/CheckBox2" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CheckBox3" />

    </LinearLayout>

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_gravity="center"
        android:layout_margin="10dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rating="3.5" />

    <EditText
        android:id="@+id/editText1"
        android:layout_gravity="center"
        android:layout_margin="10dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@id/editText1"
        android:inputType="textPassword" 
        android:hint="@string/editText1">

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_margin="10dip"
        android:gravity="center">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
           />

    </LinearLayout>

</LinearLayout>